--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
-    "express": "^4.17.1",
-    "mongoose": "^5.11.8"
+    "express": "^4.18.2",
+    "mongoose": "^5.13.22",
+    "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
     "concurrently": "^5.3.0",
